clients/nebber/stylesheets/style.css
/* line 18, /Users/sammarkiewicz/nebber-landing/source/stylesheets/style.sass */
body {
  font-family: "Open Sans", sans-serif;
  font-size: 0.875em; }

/* line 22, /Users/sammarkiewicz/nebber-landing/source/stylesheets/style.sass */
body, html {
  height: 100%; }

/* line 25, /Users/sammarkiewicz/nebber-landing/source/stylesheets/style.sass */
h1 {
  width: 320px;
  height: 320px;
  text-indent: -999em;
  display: block;
  background: transparent url("../images/logo.png");
  position: fixed;
  width: 320px;
  margin-left: -160px;
  left: 50%;
  -webkit-transition: width ease-in-out 0.2s;
  -moz-transition: width ease-in-out 0.2s;
  transition: width ease-in-out 0.2s;
  background-position: center center;
  background-repeat: no-repeat;
  top: 10%;
  z-index: 3; }

#skrollr-body {
  width: 100%;
  height: 100%
}

/* line 34, /Users/sammarkiewicz/nebber-landing/source/stylesheets/style.sass */
#m-box--header-thanks h1 {
  width: 300px;
  height: 425px;
  text-indent: -999em;
  display: block;
  background: transparent url("../images/logo-thankyou-small.png");
  position: fixed;
  width: 300px;
  margin-left: -150px;
  left: 50%;
  -webkit-transition: width ease-in-out 0.2s;
  -moz-transition: width ease-in-out 0.2s;
  transition: width ease-in-out 0.2s;
  background-position: center center;
  background-repeat: no-repeat;
  top: 10%;
  z-index: 3; }

/* line 44, /Users/sammarkiewicz/nebber-landing/source/stylesheets/style.sass */
.m-box--message span {
  width: 100%;
  text-align: center; }

/* line 48, /Users/sammarkiewicz/nebber-landing/source/stylesheets/style.sass */
#m-link--scrollTo {
  width: 200px;
  margin-left: -100px;
  left: 50%;
  height: 30px;
  padding: 110px 0 0;
  background: transparent url(../images/arrow-down.png) top center no-repeat;
  font-size: 1.6em;
  font-weight: 300;
  display: block;
  text-decoration: none;
  text-transform: uppercase;
  color: white;
  text-align: center;
  position: absolute;
  z-index: 2;
  bottom: 10%; }

/* line 67, /Users/sammarkiewicz/nebber-landing/source/stylesheets/style.sass */
#m-box--panel-1 {
  background: #f05949;
  height: 100%;
  color: white;
  position: relative;
  z-index: 1;
  overflow: hidden; }

/* line 77, /Users/sammarkiewicz/nebber-landing/source/stylesheets/style.sass */
#m-box--panel-2 {
  background: white url(../images/final-screen-bg.png) top center no-repeat fixed;
  height: 100%;
  position: relative; }
  /* line 81, /Users/sammarkiewicz/nebber-landing/source/stylesheets/style.sass */
  #m-box--panel-2 h2, #m-box--panel-2 .m-title--thanks {
    margin-top: 0;
    font-family: "Roboto", sans-serif;
    font-weight: 300;
    width: 400px;
    left: 50%;
    margin-left: -200px;
    position: absolute;
    top: 60%;
    font-size: 2em;
    color: #444444;
    text-align: center; }
  /* line 93, /Users/sammarkiewicz/nebber-landing/source/stylesheets/style.sass */
  #m-box--panel-2 .m-title--thanks {
    top: 75%; }

/* line 96, /Users/sammarkiewicz/nebber-landing/source/stylesheets/style.sass */
#m-link--connect-w-fb {
  width: 350px;
  height: 185px;
  text-indent: -999em;
  display: block;
  background: transparent url("../images/button-fb.png");
  position: absolute;
  width: 350px;
  margin-left: -175px;
  opacity: .85;
  filter: alpha(opacity=85);
  -webkit-transition: opacity ease-in-out 0.4s;
  -moz-transition: opacity ease-in-out 0.4s;
  transition: opacity ease-in-out 0.4s;
  left: 50%;
  bottom: 5%; }

#m-link--connect-w-fb:hover {
  opacity: 1;
  filter: alpha(opacity=100);
}

@media only screen and (max-width: 800px) {
  /* line 103, /Users/sammarkiewicz/nebber-landing/source/stylesheets/style.sass */
  #m-link--connect-w-fb {
    width: 300px;
    height: 155px;
    text-indent: -999em;
    display: block;
    background: transparent url("../images/button-fb.png");
    position: absolute;
    width: 300px;
    margin-left: -150px;
    left: 50%;
    background-size: 100%; } }
@media only screen and (max-height: 650px) {
  /* line 109, /Users/sammarkiewicz/nebber-landing/source/stylesheets/style.sass */
  h1 {
    width: 200px;
    height: 200px;
    text-indent: -999em;
    display: block;
    background: transparent url("../images/logo.png");
    position: fixed;
    width: 200px;
    margin-left: -100px;
    left: 50%;
    background-size: 100%;
    top: 5%;
    z-index: 3; }

    #m-box--header-thanks h1 {
    top: 0 !important;
    margin-top: 0 !important; }

    .m-title--thanks {
    top: 87% !important;
    font-size: 1.6em !important
    }

  /* line 116, /Users/sammarkiewicz/nebber-landing/source/stylesheets/style.sass */
  #m-box--panel-2 h2 {
    top: 45%; } }
@media only screen and (max-width: 568px) {
  /* line 120, /Users/sammarkiewicz/nebber-landing/source/stylesheets/style.sass */
  body {
    border: 15px solid #efefef;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box; }

  /* line 125, /Users/sammarkiewicz/nebber-landing/source/stylesheets/style.sass */
  #m-box--panel-1 {
    display: none; }

  /* line 127, /Users/sammarkiewicz/nebber-landing/source/stylesheets/style.sass */
  #m-box--header-thanks h1 {
    width: 200px;
    height: 300px;
    text-indent: -999em;
    display: block;
    background: transparent url("../images/logo-thankyou-small.png");
    position: fixed;
    width: 200px;
    margin-left: -100px;
    left: 50%;
    background-size: 100%;
    top: 2% !important; }

  /* line 132, /Users/sammarkiewicz/nebber-landing/source/stylesheets/style.sass */
  h1 {
    width: 150px;
    height: 150px;
    text-indent: -999em;
    display: block;
    background: transparent url("../images/logo.png");
    position: fixed;
    width: 150px;
    margin-left: -75px;
    left: 50%;
    background-size: 100%; }

  /* line 136, /Users/sammarkiewicz/nebber-landing/source/stylesheets/style.sass */
  .m-title--thanks {
    top: 82% !important;
    font-size: 1.5em !important;
    width: 90% !important;
    margin-left: -45% !important; }
    /* line 141, /Users/sammarkiewicz/nebber-landing/source/stylesheets/style.sass */
    .m-title--thanks span {
      width: 100% !important; }

  /* line 143, /Users/sammarkiewicz/nebber-landing/source/stylesheets/style.sass */
  #m-box--panel-2 h2 {
    font-size: 1.4em; }

  /* line 145, /Users/sammarkiewicz/nebber-landing/source/stylesheets/style.sass */
  #m-link--connect-w-fb {
    width: 250px;
    height: 125px;
    text-indent: -999em;
    display: block;
    background: transparent url("../images/button-fb.png");
    position: absolute;
    width: 250px;
    margin-left: -125px;
    left: 50%;
    background-size: 100%; } }
@media only screen and (min-width: 321px) and (max-width: 568px) and (orientation: landscape) {
  /* line 151, /Users/sammarkiewicz/nebber-landing/source/stylesheets/style.sass */
  #m-box--panel-1 {
    display: none; }

  /* line 153, /Users/sammarkiewicz/nebber-landing/source/stylesheets/style.sass */
  h1 {
    width: 235px;
    height: 105px;
    text-indent: -999em;
    display: block;
    background: transparent url("../images/logo-mobile.png");
    position: fixed;
    width: 235px;
    margin-left: -117.5px;
    left: 50%; }

  /* line 156, /Users/sammarkiewicz/nebber-landing/source/stylesheets/style.sass */
  #m-box--header-thanks h1 {
    left: 10%;
    margin-left: 0;
    top: 0 !important;
    margin-top: 0;
    width: 170px;
    height: 250px;
    text-indent: -999em;
    display: block;
    background: transparent url("../images/logo-thankyou-small.png"); }

  /* line 162, /Users/sammarkiewicz/nebber-landing/source/stylesheets/style.sass */
  .m-title--thanks {
    display: block;
    left: 40% !important;
    width: 50% !important;
    margin-left: 0 !important;
    top: 40% !important; }

  /* line 168, /Users/sammarkiewicz/nebber-landing/source/stylesheets/style.sass */
  h2 {
    display: none; } }
@media only screen and (max-height: 380px) and (min-width: 684px) and (orientation: landscape) {
  /* line 172, /Users/sammarkiewicz/nebber-landing/source/stylesheets/style.sass */
  #m-box--panel-1 {
    display: none; }

  /* line 175, /Users/sammarkiewicz/nebber-landing/source/stylesheets/style.sass */
  #m-box--panel-2 h2 {
    top: 35%; }

  /* line 177, /Users/sammarkiewicz/nebber-landing/source/stylesheets/style.sass */
  h1 {
    width: 235px;
    height: 105px;
    text-indent: -999em;
    display: block;
    background: transparent url("../images/logo-mobile.png");
    position: fixed;
    width: 235px;
    margin-left: -117.5px;
    left: 50%; } }
@media only screen and (min-width: 768px) and (max-width: 1020px) and (orientation: landscape) {
  /* line 182, /Users/sammarkiewicz/nebber-landing/source/stylesheets/style.sass */
  h1 {
    top: 2%; }
@media only screen and (min-device-width: 1024px) and (max-device-height: 768px) and (orientation: landscape) {
  /* line 188, /Users/sammarkiewicz/nebber-landing/source/stylesheets/style.sass */
  #m-box--header-thanks h1 {
    top: 0 !important;
    margin-top: 0 !important; } }
@media only screen and (min-device-width: 1024px) and (max-device-height: 600px) and (orientation: landscape) {
  /* line 193, /Users/sammarkiewicz/nebber-landing/source/stylesheets/style.sass */
  #m-box--header-thanks h1 {
    left: 10%;
    margin-left: 0;
    top: 0 !important;
    margin-top: 0;
    width: 250px;
    height: 350px;
    text-indent: -999em;
    display: block;
    background: transparent url("../images/logo-thankyou-small.png"); }

  /* line 199, /Users/sammarkiewicz/nebber-landing/source/stylesheets/style.sass */
  .m-title--thanks {
    display: block;
    left: 40% !important;
    width: 50% !important;
    margin-left: 0 !important;
    top: 40% !important; } }
@media only screen and (min-device-width: 685px) and (max-device-height: 380px) and (orientation: landscape) {
  /* line 208, /Users/sammarkiewicz/nebber-landing/source/stylesheets/style.sass */
  #m-box--header-thanks h1 {
    left: 5%;
    margin-left: 0;
    top: 0 !important;
    margin-top: 0;
    width: 210px;
    height: 310px;
    text-indent: -999em;
    display: block;
    background: transparent url("../images/logo-thankyou-small.png"); }

  /* line 214, /Users/sammarkiewicz/nebber-landing/source/stylesheets/style.sass */
  .m-title--thanks {
    display: block;
    left: 40% !important;
    width: 50% !important;
    margin-left: 0 !important;
    top: 40% !important; } }

